Correct issue with responsiveness with small screens. Screen can now scroll to see buttons on small screens.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -10,6 +10,10 @@ body {
   width: 80%;
 }
 
+section {
+  margin-bottom: 5em;
+}
+
 #copyIcon {
   /* Style the form icons */
   padding: 10px;
@@ -39,3 +43,4 @@ body {
   left: 0;
   bottom: 0;
 }
+
